# t-backend

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  settings.py
scripts/: deploy.sh
t-backend/: containers.py  main.py
t_backend/: cipher.py  constants.py  containers.py  database.py  main.py  models.py  settings.py
t_backend/alembic/: env.py
t_backend/alembic/versions/: 76a79139d62f_add_created_at_in_message.py  b4db705c7008_rename_content_encrypted_content.py  bf2b64ac492b_add_message_is_complete.py  ed86257dc575_init.py
t_backend/dtos/: request.py  response.py
t_backend/langchain/: prompts.py
t_backend/repositories/: chat.py  message.py  openai.py
t_backend/routers/: chat.py  core.py  message.py
t_backend/services/: chat.py  message.py
t_prompt/: README.md  load_pdf.py  requirements.txt  script.ipynb
t_prompt/scripts/: summarize_pdf.py
webapp/: endpoints.py
webapp/services/: process_ai.py
