[tool.poetry]
name = "t-backend"
version = "0.1.0"
description = ""
authors = ["sanghunmoon <lego0142@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
pydantic = {version = "v1.10.13", extras = ["dotenv"]}
uvicorn = "^0.23.2"
langchain = "^0.0.304"
openai = "^0.28.1"
sentry-sdk = "^1.34.0"
sqlalchemy = "^2.0.23"
pymysql = "^1.1.0"
mysqlclient = "^2.2.0"
alembic = "^1.12.1"
dependency-injector = "^4.41.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
